--- a/cssConcept/systemPreview.css
+++ b/cssConcept/systemPreview.css
@@ -118,10 +118,10 @@
 
 .systemActions .actionsList {
   grid-area: actions;
-  margin-top: 20px;
   display: grid;
   grid-template-rows: 130px;
   grid-auto-rows: 200px;
+  margin-top: 20px;
 }
 
 .actionsList .actionsSegment { width: 100%; padding: 15px 0; }
@@ -136,11 +136,12 @@
   width: 100%;
   min-width: 100%;
   height: 100%;
-  padding: 0 40px 0 40px;
+  padding: 0 40px;
   border-left: 2px solid var(--input-border-color);
   box-sizing: border-box;
 }
 
+.actionsList .actionsSegment .wrapper .segmentDeviceLabel,
 .actionsList .actionsSegment .wrapper div { font-size: 12px; font-weight: 500; }
 .actionsList .actionsSegment .wrapper .segmentIndexLabel { font-size: 18px; }
 
@@ -178,3 +179,39 @@
 
 .segmentButtonsContainer button.duplicateDeviceButton { background-color: var(--third-bg-color); }
 .segmentButtonsContainer button.removeDeviceButton { background-color: var(--secondary-bg-color); }
+
+@media screen and (max-width: 699px) {
+  .actionsList .actionsSegment .wrapper { padding: 0 40px 0 8px; }
+
+  .actionsList .actionsSegment .wrapper .deviceTypeWrapper { flex-direction: column; column-gap: 0; row-gap: 20px; }
+
+  .actionsList .actionsSegment .wrapper .deviceTypeWrapper .segmentDeviceSelectContainer { width: 210px; }
+}
+
+@media screen and (min-width: 700px) and (max-width: 1015px) {
+  .systemActions {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .actionsList .actionsSegment .wrapper { padding: 0 40px 8px; }
+}
+
+@media screen and (max-width: 1015px) {
+  .system .systemPreview {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .systemGraphics .systemDiagram .deviceSegment {
+    grid-template-rows: 174px;
+    grid-template-columns: 1fr 90px 1fr;
+  }
+
+  .systemActions .actionsList { grid-auto-rows: auto; margin-top: 0; }
+
+  .systemPreview .systemGraphics { margin-bottom: 22px; }
+
+  .actionsList .actionsSegment .wrapper { border: none; }
+}
