Fixing downloading exported files with generated system.

--- a/cssConcept/usedDevices.css
+++ b/cssConcept/usedDevices.css
@@ -17,6 +17,8 @@
 
 #usedDevicesContainer .usedDeviceItem:first-child { padding-top: 0; }
 
+#usedDevicesContainer .usedDeviceItem:last-child { border: none; }
+
 .usedDeviceItem .systemUsedDeviceDataContainer,
 .usedDeviceItem .usedDeviceImageContainer {
   display: flex;
