--- a/cssConcept/usedDevices.css
+++ b/cssConcept/usedDevices.css
@@ -39,6 +39,10 @@
   text-decoration: none;
 }
 
+.systemUsedDeviceDataContainer .usedDeviceDocs:nth-of-type(2) {
+  margin-top: 8px;
+}
+
 .usedDeviceImageContainer img {
   display: block;
   width: 100%;
