--- a/cssConcept/systemPreview.css
+++ b/cssConcept/systemPreview.css
@@ -202,6 +202,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    max-width: 1100px;
   }
 
   .systemGraphics .systemDiagram .deviceSegment {
