--- a/cssConcept/system.css
+++ b/cssConcept/system.css
@@ -1,8 +1,6 @@
 .system {
-  display: grid;
-  grid-template-areas:
-    "systemStatus systemPreview wrapper";
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  justify-content: center;
   column-gap: 25px;
   row-gap: 17px;
   margin-bottom: 17px;
@@ -20,7 +18,7 @@
 
 .system .systemStatus,
 .system .wrapper { width: 100%; max-width: 325px; }
-.system .systemPreview { width: 100%; }
+.system .systemPreview { width: 100%; min-width: 943px; max-width: 1100px; }
 
 .system .systemFiles { margin-bottom: 17px; }
 
@@ -159,6 +157,7 @@
 
 @media screen and (min-width: 700px) and (max-width: 1642px) {
   .system {
+    display: grid;
     grid-template-areas:
       "systemPreview systemPreview"
       "systemStatus wrapper";
