--- a/cssConcept/index.css
+++ b/cssConcept/index.css
@@ -27,6 +27,13 @@ body {
   overflow-x: hidden;
 }
 
+button:disabled {
+  background-color: var(--accent-bg-color);
+  color: #eaeaea;
+  border: 2px solid #eaeaea;
+  cursor: not-allowed;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
